geographics/assets/css/main.css
body {
	font-family: Helvetica ,Arial,sans-serif;
	font-size: 2vw;
	margin-top: 5vh;
	margin-bottom: 1.5vh;
	margin-left: 3vw;
	margin-right: 3vw;
	color:rgb(48, 48, 48);
}

a {
	color:pink;
}




* {
	box-sizing: border-box;
  }
  
  .code{
	  text-align: right;
	  padding-right: 1.5vw;
	  padding-top: 1.5vh;
  }
  
  .title {
	font-size: 11vw;
	color: rgb(171, 171, 171);
	opacity:100%;
	font-weight: bold;
	line-height: 80%;
	letter-spacing: -0.05em;
	padding: 1.5vw;
	margin-top: 45vh;
  }

  .intro{
	  padding-left: 1.5vw;
	  padding-right: 1.5vw;
  }

  .hide {
	opacity: 0;
	transition: 5s;
  }

  .subtitle em{
	  opacity: 60%;
	  font-weight: bold;
  }
  
.bold{
	font-weight: bold;
	color: rgb(79, 77, 77)
}

.bigger{
	font-size: 3.5vw;
}

  .bottomlinetitle {
	color: rgb(79, 77, 77);
	opacity: 100%;
}

  .subtitle {
	display: flex;
	flex-wrap: wrap;
	position: sticky;
	width: 100%;
	top: 0px;
	left: 0px;
	font-size: 3vw;
	word-spacing: -.7vw;
	margin-top: 6vh;
	background-color: white;
  }
  
  .left {
	width: 50%;
	padding: 1.5vw;
  }
  
  .right {
	width: 50%;
	padding: 1.5vw;
  }
  
  .main {
	display: flex;
	flex-wrap: wrap;
  }
  
  .business {
	width: 50%;
	display: flex;
	flex-wrap: wrap;
  }
  
  .life {
	width: 50%;
	display: flex;
	flex-wrap: wrap;
  }
  
  .thumbnail {
	color: black;
	font-weight: normal;
	width: 50%;
	padding: 1.5vw;
  }
  
  .thumbnail.landscape {
	width: 100%;
  }
  
  .thumbnail img {
	width: 100%;
	display: block;
	margin-bottom: 1.5vh;
  }
  

  /* subsection 2 */

  .subsection2{
	display: flex;
	flex-wrap: wrap;
  }

  .textleft{
	width: 50%;
	padding: 1.5vw;
  }

  .textright{
	width: 50%;
	padding: 1.5vw;
	

  }

  .textcon {
	margin-bottom: 10vh;
	width: 100%;
	display: flex;
	flex-wrap: wrap;
}


.geotext{
	width: 100%;
}


.bodylight{
	font-weight: lighter;
}


.lesspad{
	padding: 0px;
}

.colorblue{
	color:#016fb9 ;
}

.textright p{
	font-size: 1.5vw;
	margin-top: 1.5vh;
	font-weight: lighter;
}

.price{
	font-size: 2.3vw;
}

em{
	font-weight: normal;
}

.cart{
	font-weight: bold;
	color: rgb(255, 111, 21);
	font-size: 2vw;
}

